<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4BEFEBCB"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextSyncInterval"
        android:layout_width="76dp"
        android:layout_height="59dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/default_sync_interval"
        android:inputType="number"
        android:text="@string/default_sync_interval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSyncInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sync_interval_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSyncInterval" />

    <EditText
        android:id="@+id/editTextWebUrl"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/webhook_hint"
        android:inputType="textUri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSyncInterval" />

    <TextView
        android:id="@+id/textViewWebUrl"
        android:layout_width="94dp"
        android:layout_height="17dp"
        android:layout_marginTop="16dp"
        android:text="@string/webhook_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWebUrl" />

    <EditText
        android:id="@+id/editTextAccessKey"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:hint="@string/access_keys_label"
        android:inputType="textUri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWebUrl" />

    <TextView
        android:id="@+id/textViewAccessKey"
        android:layout_width="94dp"
        android:layout_height="17dp"
        android:layout_marginTop="16dp"
        android:text="@string/access_keys_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAccessKey" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:background="#F4F4F4"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccessKey" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="184dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:onClick="onStartClick"
        android:text="@string/start_syncing_label"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatus" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="184dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:onClick="onStopClick"
        android:text="@string/stop_syncing_label"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonStart"
        app:layout_constraintTop_toTopOf="@+id/buttonStart" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="184dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:onClick="onSaveClick"
        android:text="@string/save_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
